# bub-codex

./: .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  pyproject.toml
docs/: codex-integration-organization.md  codex-integration-refactor-details.md  design.md  integration-contracts.md  prd-mvp-live-codex-runtime.md
docs/adr/: 0001-codex-compaction-summary-source.md  0002-tape-anchor-thread-semantics.md  0003-codex-runtime-adapter-facts.md  0004-runtime-resolution-and-new-thread-materialization.md  0005-dynamic-tool-provider-boundary.md  0006-event-contract-layers-and-namespaces.md  0007-bub-plugin-entrypoint-run-model-stream.md  0008-live-runtime-kernel-boundaries.md
docs/release/: mvp-candidate-checkpoint.md
docs/research/: 2026-06-10-bub-runtime-hook-strategy.md  2026-06-10-bub-tool-context-state-contract.md  2026-06-10-codex-sdk-harness-spike.md  2026-06-10-codex-tool-events-spike.md  2026-06-10-linked-sources.md  2026-06-10-real-plugin-stream-integration.md  2026-06-10-runtime-facade-spike.md  2026-06-10-source-signal-adapter-fact-tape-event.md  2026-06-10-tape-projection-spike.md  2026-06-11-bub-builtin-agent-and-plugin-lifecycle.md  2026-06-11-bub-contrib-plugin-patterns.md  2026-06-11-codex-notification-mapping.md  2026-06-11-multica-codex-runtime-reference.md  2026-06-11-mvp-readiness-review.md  2026-06-11-real-bub-cli-research.md  2026-06-11-validated-spike-summary.md
scripts/: verify_installed_plugin.py
scripts/spikes/: bootstrap_new_thread_spike.py  bub_hook_strategy_spike.py  (+25 more)
tests/: codex_record_builders.py  plugin_stream_helpers.py  test_bub_plugin_package.py  test_bub_tools.py  test_codex_thread_service.py  test_context_materialization.py  test_live_stream.py  test_notification_translator.py  test_plugin_stream_integration.py  test_republic_tape_store.py  test_runtime_adapter.py  test_turn_translator.py
(+30 files in other folders)
